feat(web): clone-from-template picker
